# ViRust-bootloader-attempt3

./: Cargo.toml  README.md  build.rs  memory.x
.cargo/: config.toml
src/: main.rs  startup.rs
src/bootloader/: mod.rs
src/drivers/: mod.rs  uart.rs
src/protocol/: mod.rs
src/security/: mod.rs
