[package]
name = "rust-bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
embedded-hal = "0.2"
nb = "1.0"  # Non-blocking I/O traits
embedded-hal-async = "1.0"  # Async HAL traits

# Cryptography
ring = "0.17"
aes = "0.8"

# Protocol implementations
can-rs = "0.1"
xcp-rs = "0.1"
uds-rs = "0.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true 
